--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> -->
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Real-time chat on react.js" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
